--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -7,12 +7,13 @@
     "# Basic Instructions\n",
     "\n",
     "1. Enter your Name and UID in the provided space.\n",
-    "2. Do the assignment in the notebook itself.\n",
-    "3. You are free to use Google Colab.\n",
-    "4. Upload to Google Drive.\n",
-    "5. Now, enter the Google Drive link in the provided space. (you can do this by opening the iPython notebook uploaded using Google Collab).\n",
-    "5. Feel free to refer to the Neural Network tutorial and the PyTorch tutorial included with the TA lecture material. \n",
-    "6. Submit the assignment to Gradescope, and a results file to ELMS."
+    "2. **Download the data file [here](https://umd.instructure.com/files/61778860/download?download_frd=1). Make sure that you are logged in to ELMS before downloading.**\n",
+    "3. Do the assignment in the notebook itself.\n",
+    "4. You are free to use Google Colab.\n",
+    "5. Upload to Google Drive.\n",
+    "6. Now, enter the Google Drive link in the provided space. (you can do this by opening the iPython notebook uploaded using Google Collab).\n",
+    "7. Feel free to refer to the Neural Network tutorial and the PyTorch tutorial included with the TA lecture material. \n",
+    "8. Submit the assignment to Gradescope, and a results file to ELMS."
    ]
   },
   {
@@ -32,6 +33,12 @@
     "# Challenge Description\n",
     "\n",
     "This assignment is a challenge. How exciting! As in Homework 2, this is a binary classification problem, where your network will learn to discriminate birds from other things. We have curated a special dataset, new to this assignment, consisting of birds and non-birds. As before, we provide you with train and validation images and labels. However, for the test set, we only give you test images! (No labels!) Your goal is to try to get the best classification performance in the class on these test images.\n",
+    "\n",
+    "#### The submissions with the top-3 accuracies in class on the *test set* will win lucrative ~~cash prizes~~ bonus points!\n",
+    "\n",
+    "* **Winner:** 20 bonus points \n",
+    "* **Runners-up:** 10 bonus points \n",
+    "* **Second Runners-up:** 5 bonus points \n",
     "\n",
     "# Challenge Rules\n",
     "\n",
