--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -25,16 +25,16 @@
     "In this assignment, you will learn PyTorch while trying to create a bird vs. non-bird classifier. More specifically, you will\n",
     "1. Write a Dataset class in PyTorch.\n",
     "2. Define a neural network in PyTorch.\n",
-    "3. Fill out the body of a training loop in PyTorch.\n",
+    "3. Implement training and testing loops in PyTorch.\n",
     "4. Find a way to improve the performance of your network above our baseline.\n",
-    "5. Compete for the best performance on a held-out test set.\n",
+    "5. Compete for the best performance on a held-out testset.\n",
     "6. Provide both a written description and a graphical justification of your approach.\n",
     "\n",
     "# Challenge Description\n",
     "\n",
     "This assignment is a challenge. How exciting! As in Homework 2, this is a binary classification problem, where your network will learn to discriminate birds from other things. We have curated a special dataset, new to this assignment, consisting of birds and non-birds. As before, we provide you with train and validation images and labels. However, for the test set, we only give you test images! (No labels!) Your goal is to try to get the best classification performance in the class on these test images.\n",
     "\n",
-    "#### The submissions with the top-3 accuracies in class on the *test set* will win lucrative ~~cash prizes~~ bonus points!\n",
+    "#### The submissions with the top-3 accuracies in class on the *testset* will win lucrative ~~cash prizes~~ bonus points!\n",
     "\n",
     "* **Winner:** 20 bonus points \n",
     "* **Runners-up:** 10 bonus points \n",
@@ -45,7 +45,7 @@
     "1. You **MUST** submit a results file on ELMS. Details are provided in Section 8 of this notebook.\n",
     "2. You **MAY NOT** deviate from neither of the **number of layers** nor the **number of parameters** in each layer from Assignment 2. Feel free to ask questions by making a *Public* post in either Piazza or Slack if you are unsure if a given change is allowed or not.\n",
     "3. You **MAY NOT** attempt to manually label the test images. We want to evaluate the performance of your neural classification network, not your classification ability.\n",
-    "4. You should try to achieve at least **75%** validation accuracy."
+    "4. You should try to achieve at least **75%** validation accuracy (Baseline)."
    ]
   },
   {
