--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "train_dataloader = DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
     "val_dataloader = DataLoader(test_set, batch_size=batch_size, shuffle=False)\n",
-    "test_dataloader = DataLoader(test_set, batch_size=batch_size, shuffle=False)"
+    "test_dataloader = DataLoader(test_set, batch_size=batch_size, shuffle=False) #DO NOT change the shuffle=False here!"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "source": [
     "**Exercise 8:** Evaluate your trained model on the test set, and submit the results.\n",
     "\n",
-    "**Important:** DO NOT shuffle the test set for any reason! Please remember to submit this file, `challenge_3_results.pth`, in ELMS."
+    "**Important:** **DO NOT** shuffle the test set for any reason! Please remember to submit this file, `challenge_3_results.pth`, in ELMS."
    ]
   },
   {
