--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -45,7 +45,15 @@
     "1. You **MUST** submit a results file on ELMS. Details are provided in Section 8 of this notebook.\n",
     "2. You **MAY NOT** deviate from neither of the **number of layers** nor the **number of parameters** in each layer from Assignment 2. Feel free to ask questions by making a *Public* post in either Piazza or Slack if you are unsure if a given change is allowed or not.\n",
     "3. You **MAY NOT** attempt to manually label the test images. We want to evaluate the performance of your neural classification network, not your classification ability.\n",
-    "4. You should try to achieve at least **75%** validation accuracy (Baseline)."
+    "4. You should try to achieve at least **75%** validation accuracy (Baseline).\n",
+    "\n",
+    "# Leaderboard \n",
+    "\n",
+    "Things just got more interesting! The top-10 testset accuracies in class will be displayed in a leaderboard which will be updated twice:\n",
+    "1. Intermediate round: Submit your `challenge_3_results_nickname.pth` from exercise 8 in ELMS by **March 26 5.00pm**.\n",
+    "2. Final round: After your final submission.\n",
+    "\n",
+    "There are no points for the intermediate round. Find the nickname rules under section 8."
    ]
   },
   {
@@ -464,17 +472,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_results_file(probabilities):\n",
+    "def generate_results_file(probabilities,nick_name):\n",
     "    if probabilities.shape[0] != 200:\n",
     "        'make sure your array is the correct shape'\n",
     "    else:\n",
+    "        save_path = 'challenge_3_results_{}.pth'.format(nick_name)\n",
     "        results_obj = {}\n",
     "        results_obj['probabilities'] = probabilities\n",
-    "        torch.save(results_obj, 'challenge_3_results.pth')"
+    "        torch.save(results_obj, save_path)"
    ]
   },
   {
@@ -483,7 +492,9 @@
    "source": [
     "**Exercise 8:** Evaluate your trained model on the test set, and submit the results.\n",
     "\n",
-    "**Important:** **DO NOT** shuffle the test set for any reason! Please remember to submit this file, `challenge_3_results.pth`, in ELMS."
+    "**Important:** **DO NOT** shuffle the test set for any reason! Please remember to submit this file, `challenge_3_results_nickname.pth`, in ELMS.\n",
+    "\n",
+    "**Nick name rules:** Your nickname should be a single string consisting of alphanumeric characters, and your nickname should not reveal who you are! Try to be creative and unique as much as possible."
    ]
   },
   {
@@ -492,12 +503,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nick_name = 'default' ## Change this to a unique nick name!\n",
+    "\n",
     "model.eval()\n",
     "for idx, batch in enumerate(test_dataloader):\n",
     "    with torch.no_grad(): \n",
     "        ## TODO: Evaluate your trained model on the test set and generate `probabilities`.\n",
     "\n",
-    "generate_results_file(probabilities)"
+    "generate_results_file(probabilities,nick_name)"
    ]
   },
   {
