--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -34,26 +34,27 @@
     "\n",
     "This assignment is a challenge. How exciting! As in Homework 2, this is a binary classification problem, where your network will learn to discriminate birds from other things. We have curated a special dataset, new to this assignment, consisting of birds and non-birds. As before, we provide you with train and validation images and labels. However, for the test set, we only give you test images! (No labels!) Your goal is to try to get the best classification performance in the class on these test images.\n",
     "\n",
-    "#### The submissions with the top-3 accuracies in class on the *testset* will win lucrative ~~cash prizes~~ bonus points!\n",
+    "# Leaderboard \n",
+    "\n",
+    "Things just got more interesting! The top-10 testset accuracies in class will be displayed in a leaderboard which will be updated twice:\n",
+    "1. Intermediate round: Submit your `challenge_3_results_nickname.pth` from exercise 8 in ELMS by **March 26 5.00pm**. Find the nickname rules under section 8.\n",
+    "2. Final round: After your final submission.\n",
+    "\n",
+    "**Submissions with the top-3 accuracies in class on the *testset* during the *final round* will win lucrative ~~cash prizes~~ bonus points!**\n",
     "\n",
     "* **Winner:** 20 bonus points \n",
     "* **Runners-up:** 10 bonus points \n",
     "* **Second Runners-up:** 5 bonus points \n",
     "\n",
+    "**Submissions with the top-3 accuracies in class on the *testset* during the *intermediate round* will win 5 bonus points each!**\n",
+    "\n",
+    "\n",
     "# Challenge Rules\n",
     "\n",
     "1. You **MUST** submit a results file on ELMS. Details are provided in Section 8 of this notebook.\n",
-    "2. You **MAY NOT** deviate from neither of the **number of layers** nor the **number of parameters** in each layer from Assignment 2. Feel free to ask questions by making a *Public* post in either Piazza or Slack if you are unsure if a given change is allowed or not.\n",
+    "2. You **MAY NOT** deviate from neither of the **number of layers (2)** nor the **number of parameters (hidden layer size = 7)** in each layer from Assignment 2. Feel free to ask questions by making a *Public* post in either Piazza or Slack if you are unsure if a given change is allowed or not.\n",
     "3. You **MAY NOT** attempt to manually label the test images. We want to evaluate the performance of your neural classification network, not your classification ability.\n",
-    "4. You should try to achieve at least **75%** validation accuracy (Baseline).\n",
-    "\n",
-    "# Leaderboard \n",
-    "\n",
-    "Things just got more interesting! The top-10 testset accuracies in class will be displayed in a leaderboard which will be updated twice:\n",
-    "1. Intermediate round: Submit your `challenge_3_results_nickname.pth` from exercise 8 in ELMS by **March 26 5.00pm**.\n",
-    "2. Final round: After your final submission.\n",
-    "\n",
-    "There are no points for the intermediate round. Find the nickname rules under section 8."
+    "4. You should try to achieve at least **75%** validation accuracy (Baseline)."
    ]
   },
   {
@@ -265,7 +266,7 @@
     "\n",
     "**Exercise 2:** Implement the neural network model.\n",
     "\n",
-    "**Important:** You MAY NOT deviate from neither of the **number of layers** nor the **number of parameters** in each layer from Assignment 2."
+    "**Important:** You MAY NOT deviate from neither of the **number of layers (2)** nor the **number of parameters (hidden layer size = 7)** in each layer from Assignment 2."
    ]
   },
   {
