--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -227,7 +227,7 @@
     "        return ##\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        ## return image, and, if not evaluate mode, the label at the given index\n",
+    "        ## return image, and, if not test mode, the label at the given index\n",
     "        ## valid formats include:\n",
     "        ## {'image': image, 'label': label}\n",
     "        ## image, label\n",
