--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -329,7 +329,7 @@
     "test_set = BirdVNonBirdDataset(...) ## TODO\n",
     "\n",
     "train_dataloader = DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
-    "val_dataloader = DataLoader(test_set, batch_size=batch_size, shuffle=False)\n",
+    "val_dataloader = DataLoader(val_set, batch_size=batch_size, shuffle=False)\n",
     "test_dataloader = DataLoader(test_set, batch_size=batch_size, shuffle=False) #DO NOT change the shuffle=False here!"
    ]
   },
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "def generate_results_file(probabilities,nick_name):\n",
-    "    if probabilities.shape[0] != 200:\n",
+    "    if probabilities.shape[0] != 400:\n",
     "        'make sure your array is the correct shape'\n",
     "    else:\n",
     "        save_path = 'challenge_3_results_{}.pth'.format(nick_name)\n",
