--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -37,8 +37,8 @@
     "# Leaderboard \n",
     "\n",
     "Things just got more interesting! The top-10 testset accuracies in class will be displayed in a leaderboard which will be updated twice:\n",
-    "1. Intermediate round: Submit your `challenge_3_results_nickname.pth` from exercise 8 to ELMS by **March 6 5.00pm**. Find the nickname rules under section 8.\n",
-    "2. Final round: After your final submission.\n",
+    "1. Intermediate round: Submit your `challenge_3_results_nickname.pth` from exercise 8 to ELMS by **March 19 5.00pm**. Find the nickname rules under section 8.\n",
+    "2. Final round: With your final submission.\n",
     "\n",
     "**Submissions with the top-3 accuracies in class on the *testset* during the *final round* will win lucrative ~~cash prizes~~ bonus points!**\n",
     "\n",
